--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
 </head>
 <body>
 <div class="header">
-      <a href="AD2.html">
+      <a href="index.html">
         <img src="logo-02.png" alt="logo"
         style="width:150px;height:125px;">
       </a>
 <div class="home">
-    <a href="AD2.html"><h1>Megan Murray</h1></a>
+    <a href="index.html"><h1>Megan Murray</h1></a>
   <div class="menu">
-    <a href="AD2.html"><b>work</b></a>
+    <a href="index.html"><b>work</b></a>
   </div>
   <div class="menu">
     <a href="about.html"><b>about</b></a>
