--- a/about.html
+++ b/about.html
@@ -26,12 +26,15 @@
   </div>
   </div>
 </div>
-<div class="about">
-<video controls autoplay width="60%">
-  <source src="about.mp4" type="video/mp4">
-  <source src="about.ogg" type="video/ogg">
-  Your browser does not support the video tag.
-</video>
-</div>
+<div class="items">
+<h3>I believe you can do anything you set your mind to.
+I think art is pretty cool.<br>
+So I learned to paint.<br>
+I think computers are pretty cool.<br>
+So I learned how to code this website.<br>
+I think Pixar is pretty cool.<br>
+So here's my first step to becoming the next Pixar animator.<br>
+  In the meantime, I do some pretty cool art direction too.</h3>
+  </div>
 </body>
 </html>
