--- a/PartnersGlobal.html
+++ b/PartnersGlobal.html
@@ -86,6 +86,31 @@
   </div>
     <img src="Twitter Popup.png" alt="Twitter Popup"
     style="width:100%;">
+    <div class="imgitem">
+      <img src="Twitter Popup_laptop.jpg" alt="Twitter Popup Laptop"
+      style="width:100%;">
+    </div>
+    <div class="imgitem">
+      <img src="Twitter Popup_mobile.jpg" alt="Twitter Popup Mobile"
+      style="width:100%;">
+    </div>
+    <div class="imgitem">
+      <img src="Mall Ad.jpg" alt="Mall Ad"
+      style="width:100%;">
+    </div>
+    <div class="imgitem">
+      <img src="Mall Ad mockup.jpg" alt="Mall Ad Mockup"
+      style="width:100%;">
+    </div>
+    <div class="imgitem">
+      <img src="Mall Wifi Popup.jpg" alt="Mall Ad Popup"
+      style="width:100%;">
+    </div>
+    <img src="Twitter Emoji.png" alt="Twitter Emoji"
+    style="width:50%;">
+</div>
+<h2>Twitter Emoji</h2>
+<br></br>
     <div class="container">
       <a href="Amazon.html" class="hover-container">
         <img src="amazon3.gif" alt="Amazon GIF"
