--- a/about.html
+++ b/about.html
@@ -28,12 +28,12 @@
 </div>
 <div class="items">
 <h3>I believe you can do anything you set your mind to.
-I think art is pretty cool.<br>
-So I learned to paint.<br>
-I think computers are pretty cool.<br>
-So I learned how to code this website.<br>
-I think Pixar is pretty cool.<br>
-So here's my first step to becoming the next Pixar animator.<br>
+I think art is pretty cool.<br></br>
+So I learned to paint.<br></br>
+I think computers are pretty cool.<br></br>
+So I learned how to code this website.<br></br>
+I think Pixar is pretty cool.<br></br>
+So here's my first step to becoming the next Pixar animator.<br></br>
   In the meantime, I do some pretty cool art direction too.</h3>
   </div>
 </body>
