--- a/Amazon.html
+++ b/Amazon.html
@@ -25,38 +25,6 @@
     </div>
   </div>
   </div>
-  <div class="headcontainer">
-    <a href="PartnersGlobal.html" class="hover-headcontainer">
-      <img src="pg.gif" alt="Drizly"
-      style="width:100%;">
-      <img src="portfolio icons-05.png" alt="Drizly"
-      style="width:100%;">
-    </a>
-    <a href="MFA.html" class="hover-headcontainer">
-      <img src="mfa5.gif" alt="Drizly"
-      style="width:100%;">
-      <img src="portfolio icons-06.png" alt="Drizly"
-      style="width:100%;">
-    </a>
-  <a href="LondonPub.html" class="hover-headcontainer">
-    <img src="londonpubgif2.gif" alt="London Pub GIF"
-      style="width:100%;">
-    <img src="portfolio icons-07.png" alt="Drizly"
-      style="width:100%;">
-  </a>
-  <a href="Drizly.html" class="hover-headcontainer">
-    <img src="drizly.gif" alt="Drizly"
-      style="width:100%;">
-    <img src="portfolio icons-08.png" alt="Drizly"
-      style="width:100%;">
-  </a>
-  <a href="ArtDesign.html" class="hover-headcontainer">
-    <img src="art.gif" alt="Drizly"
-      style="width:100%;">
-    <img src="portfolio icons-03.png" alt="Drizly"
-      style="width:100%;">
-  </a>
-  </div>
   </div>
  <h2>Amazon Dash Button</h2>
    <h3>The Challenge: Introduce Amazon Dash Buttons.<br>
@@ -128,7 +96,7 @@
     style="width:100%;">
 </a>
 <a href="Drizly.html" class="hover-container">
-  <img src="drizly.gif" alt="Drizly"
+    <img src="stubhub.gif" alt="Stubhub Gif"
     style="width:100%;">
   <img src="portfolio icons-08.png" alt="Drizly"
     style="width:100%;">
