--- a/ArtDesign.html
+++ b/ArtDesign.html
@@ -3,11 +3,10 @@
 <head>
   <meta charset="utf-8">
   <title>Home</title>
-  <link rel="stylesheet" href="pages.css">
+  <link rel="stylesheet" href="ArtDesign.css">
 </head>
 <body>
   <div class="header">
-    <div class="logo">
         <a href="index.html">
           <img src="logo-02.png" alt="logo"
           style="width:150px;height:125px;">
@@ -25,39 +24,129 @@
     </div>
   </div>
   </div>
-  <div class="headcontainer">
-    <a href="Amazon.html" class="hover-headcontainer">
-      <img src="amazon3.gif" alt="Amazon GIF"
-      style="width:100%;">
-      <img src="portfolio icons-04.png" alt="Amazon Icon"
-      style="width:100%;">
-    </a>
-    <a href="PartnersGlobal.html" class="hover-headcontainer">
-      <img src="pg.gif" alt="Drizly"
-      style="width:100%;">
-      <img src="portfolio icons-05.png" alt="Drizly"
-      style="width:100%;">
-    </a>
-    <a href="MFA.html" class="hover-headcontainer">
-      <img src="mfa5.gif" alt="Drizly"
-      style="width:100%;">
-      <img src="portfolio icons-06.png" alt="Drizly"
-      style="width:100%;">
-    </a>
-  <a href="LondonPub.html" class="hover-headcontainer">
-    <img src="londonpubgif2.gif" alt="London Pub GIF"
-      style="width:100%;">
-    <img src="portfolio icons-07.png" alt="Drizly"
-      style="width:100%;">
-  </a>
-  <a href="Drizly.html" class="hover-headcontainer">
-    <img src="drizly.gif" alt="Drizly"
-      style="width:100%;">
-    <img src="portfolio icons-08.png" alt="Drizly"
-      style="width:100%;">
-  </a>
+  <div id="wrapper">
+    <p><a class="button" href="#popup1"><img src="art1.png" alt="Art1"
+    style="width:200px;"></a></p>
+      <p><a class="button" href="#popup2"><img src="art2.png" alt="art2"
+      style="width:200px;"></a></p>
+      <p><a class="button" href="#popup3"><img src="art3.png" alt="Art3"
+      style="width:200px;"></a></p>
+        <p><a class="button" href="#popup4"><img src="art4.png" alt="art4"
+        style="width:200px;"></a></p>
+        <p><a class="button" href="#popup5"><img src="art5.png" alt="art5"
+        style="width:200px;"></a></p>
+        <p><a class="button" href="#popup6"><img src="art6.png" alt="Art6"
+        style="width:200px;"></a></p>
+          <p><a class="button" href="#popup7"><img src="art7.png" alt="art7"
+          style="width:200px;"></a></p>
+          <p><a class="button" href="#popup8"><img src="art8.png" alt="Art8"
+          style="width:200px;"></a></p>
+            <p><a class="button" href="#popup9"><img src="art9.png" alt="art9"
+            style="width:200px;"></a></p>
+            <p><a class="button" href="#popup10"><img src="art10.png" alt="art10"
+            style="width:200px;"></a></p>
   </div>
+  <div id="popup1" class="overlay">
+      <div class="popup">
+        <img src="art1.jpg" alt="art1"
+        style="width:600px;">
+          <a class="close" href="#">&times;</a>
+          <div class="content">
+              <p>Ocean Light</p>
+          </div>
+      </div>
   </div>
+  <div id="popup2" class="overlay">
+      <div class="popup">
+        <img src="art2.jpg" alt="art2"
+        style="width:600px;">
+          <a class="close" href="#">&times;</a>
+          <div class="content">
+              <p>City of Color</p>
+          </div>
+      </div>
+  </div>
+  <div id="popup3" class="overlay">
+      <div class="popup">
+        <img src="art3.jpg" alt="art3"
+        style="width:600px;">
+          <a class="close" href="#">&times;</a>
+          <div class="content">
+              <p>Centerport Reflection</p>
+          </div>
+      </div>
+  </div>
+  <div id="popup4" class="overlay">
+      <div class="popup">
+        <img src="art4.jpg" alt="art4"
+        style="width:600px;">
+          <a class="close" href="#">&times;</a>
+          <div class="content">
+              <p>Spacescape</p>
+          </div>
+      </div>
+  </div>
+  <div id="popup5" class="overlay">
+      <div class="popup">
+        <img src="art5.jpg" alt="art5"
+        style="width:600px;">
+          <a class="close" href="#">&times;</a>
+          <div class="content">
+              <p>Mill Pond Gazebo</p>
+          </div>
+      </div>
+  </div>
+  <div id="popup6" class="overlay">
+      <div class="popup">
+        <img src="art6.jpg" alt="art6"
+        style="width:600px;">
+          <a class="close" href="#">&times;</a>
+          <div class="content">
+              <p>On the Other Side</p>
+          </div>
+      </div>
+  </div>
+  <div id="popup7" class="overlay">
+      <div class="popup">
+        <img src="art7.jpg" alt="art7"
+        style="width:600px;">
+          <a class="close" href="#">&times;</a>
+          <div class="content">
+              <p>Holding Hands</p>
+          </div>
+      </div>
+  </div>
+  <div id="popup8" class="overlay">
+      <div class="popup">
+        <img src="art8.jpg" alt="art8"
+        style="width:600px;">
+          <a class="close" href="#">&times;</a>
+          <div class="content">
+              <p>Into the Air</p>
+          </div>
+      </div>
+  </div>
+  <div id="popup9" class="overlay">
+      <div class="popup">
+        <img src="art9.jpg" alt="art9"
+        style="width:600px;">
+          <a class="close" href="#">&times;</a>
+          <div class="content">
+              <p>Lazy Leopard</p>
+          </div>
+      </div>
+  </div>
+  <div id="popup10" class="overlay">
+      <div class="popup">
+        <img src="art10.jpg" alt="art10"
+        style="width:600px;">
+          <a class="close" href="#">&times;</a>
+          <div class="content">
+              <p>Facial Design</p>
+          </div>
+      </div>
+  </div>
+<!--
   <div class="container">
     <a href="Amazon.html" class="hover-container">
       <img src="amazon3.gif" alt="Amazon GIF"
@@ -90,5 +179,6 @@
       style="width:100%;">
   </a>
   </div>
+-->
 </body>
 </html>
