--- a/Drizly.html
+++ b/Drizly.html
@@ -25,57 +25,12 @@
     </div>
   </div>
   </div>
-  <div class="headcontainer">
-    <a href="Amazon.html" class="hover-headcontainer">
-      <img src="amazon3.gif" alt="Amazon GIF"
-      style="width:100%;">
-      <img src="portfolio icons-04.png" alt="Amazon Icon"
-      style="width:100%;">
-    </a>
-    <a href="PartnersGlobal.html" class="hover-headcontainer">
-      <img src="pg.gif" alt="Partners Global GIF"
-      style="width:100%;">
-      <img src="portfolio icons-05.png" alt="Partners Global Icon"
-      style="width:100%;">
-    </a>
-    <a href="MFA.html" class="hover-headcontainer">
-      <img src="mfa5.gif" alt="Drizly"
-      style="width:100%;">
-      <img src="portfolio icons-06.png" alt="Drizly"
-      style="width:100%;">
-    </a>
-  <a href="LondonPub.html" class="hover-headcontainer">
-    <img src="londonpubgif2.gif" alt="London Pub GIF"
-      style="width:100%;">
-    <img src="portfolio icons-07.png" alt="Drizly"
-      style="width:100%;">
-  </a>
-  <a href="ArtDesign.html" class="hover-headcontainer">
-    <img src="art.gif" alt="Art GIF"
-      style="width:100%;">
-    <img src="portfolio icons-03.png" alt="Art Icon"
-      style="width:100%;">
-  </a>
   </div>
-  </div>
- <h2>Drizly</h2>
- <h3>The Challenge: Make millennials aware of the new alcohol delivery app​.<br>
-   The Solution: Make them realize the best place to enjoy a night of drinking
-    with friends is in their own home.</h3>
-<div class="items">
-  <div class="imgitem">
-    <img src="Drizly1.jpg" alt="Drizly Ad 1"
-    style="width:100%;">
-  </div>
-  <div class="imgitem">
-    <img src="Drizly2.jpg" alt="Drizly Ad 2"
-    style="width:100%;">
-  </div>
-  <div class="imgitem">
-    <img src="Drizly3.jpg" alt="Drizly Ad 3"
-    style="width:100%;">
-  </div>
-</div>
+ <h2>StubHub</h2>
+ <h3>The Challenge: Create a campaign for a brand you care about.<br>
+   The Solution: Show all the unique experiences StubHub has given to me.<br></br>
+<iframe width="100%" height="450" src="https://www.youtube.com/embed/PWG21Mbqo70" frameborder="0" allowfullscreen></iframe>
+<br></br>
 <div class="container">
   <a href="Amazon.html" class="hover-container">
     <img src="amazon3.gif" alt="Amazon GIF"
