--- a/LondonPub.html
+++ b/LondonPub.html
@@ -25,38 +25,6 @@
     </div>
   </div>
   </div>
-  <div class="headcontainer">
-    <a href="Amazon.html" class="hover-headcontainer">
-      <img src="amazon3.gif" alt="Amazon GIF"
-      style="width:100%;">
-      <img src="portfolio icons-04.png" alt="Amazon Icon"
-      style="width:100%;">
-    </a>
-    <a href="PartnersGlobal.html" class="hover-headcontainer">
-      <img src="pg.gif" alt="Partners Global GIF"
-      style="width:100%;">
-      <img src="portfolio icons-05.png" alt="Partners Global Icon"
-      style="width:100%;">
-    </a>
-    <a href="MFA.html" class="hover-headcontainer">
-      <img src="mfa5.gif" alt="Drizly"
-      style="width:100%;">
-      <img src="portfolio icons-06.png" alt="Drizly"
-      style="width:100%;">
-    </a>
-  <a href="Drizly.html" class="hover-headcontainer">
-    <img src="drizly.gif" alt="Drizly GIF"
-      style="width:100%;">
-    <img src="portfolio icons-08.png" alt="Drizly Icon"
-      style="width:100%;">
-  </a>
-  <a href="ArtDesign.html" class="hover-headcontainer">
-    <img src="art.gif" alt="Art GIF"
-      style="width:100%;">
-    <img src="portfolio icons-03.png" alt="Art Icon"
-      style="width:100%;">
-  </a>
-  </div>
   </div>
  <h2>London Pub</h2>
    <h3>The Challenge: London Pub is virtually unknown in the US.<br>
@@ -118,7 +86,7 @@
     style="width:100%;">
   </a>
 <a href="Drizly.html" class="hover-container">
-  <img src="drizly.gif" alt="Drizly GIF"
+    <img src="stubhub.gif" alt="Stubhub Gif"
     style="width:100%;">
   <img src="portfolio icons-08.png" alt="Drizly Icon"
     style="width:100%;">
