--- a/about.html
+++ b/about.html
@@ -2,39 +2,35 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Home</title>
-  <link rel="stylesheet" href="pages.css">
+  <link rel="stylesheet" href="about.css">
 </head>
 <body>
-  <div class="header">
-    <div class="logo">
-        <a href="index.html">
-          <img src="logo-02.png" alt="logo"
-          style="width:150px;height:125px;">
-        </a>
-  <div class="home">
-      <a href="index.html"><h1>Megan Murray</h1></a>
-    <div class="menu">
-      <a href="index.html"><b>work</b></a>
-    </div>
-    <div class="menu">
-      <a href="about.html"><b>about</b></a>
-    </div>
-    <div class="menu">
-      <a href="resume.html"><b>resume</b></a>
-    </div>
+<div class="header">
+      <a href="index.html">
+        <img src="logo-02.png" alt="logo"
+        style="width:150px;height:125px;">
+      </a>
+<div class="home">
+    <a href="index.html"><h1>Megan Murray</h1></a>
+  <div class="menu">
+    <a href="index.html"><b>work</b></a>
   </div>
+  <div class="menu">
+    <a href="about.html"><b>about</b></a>
+  </div>
+  <div class="menu">
+    <a href="resume.html"><b>resume</b></a>
   </div>
 </div>
-<div class="items">
-<h3>I believe you can do anything you set your mind to.
-I think art is pretty cool.<br></br>
-So I learned to paint.<br></br>
-I think computers are pretty cool.<br></br>
-So I learned how to code this website.<br></br>
-I think Pixar is pretty cool.<br></br>
-So here's my first step to becoming the next Pixar animator.<br></br>
-  In the meantime, I do some pretty cool art direction too.</h3>
-  </div>
+</div>
+<div class="container">
+<h3>I have enjoyed creating art since a young age and I hope
+  you have enjoyed viewing my work. I am eager and excited to use my talents in
+  art in an industry that can influence so many people. Advertising is a powerful
+  industry and I believe in using its power for good. This is why I hope to work
+  as an art director for nonprofit clients and cause-related advertising.<br></br>
+<b>murraym1@bu.edu<br>(631)702-3715</b></h3>
+<img src="aboutpage.jpg" alt="about image" style="width:50%;height:50%;">
+</div>
 </body>
 </html>
