--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   style="width:250px;height:206px;">
 </a>
 <a href="Drizly.html" class="hover-container">
-  <img src="drizly.gif" alt="Drizly"
+    <img src="stubhub.gif" alt="Stubhub Gif"
   style="width:250px;height:206px;">
   <img src="portfolio icons-08.png" alt="Drizly"
   style="width:250px;height:206px;">
