--- a/MFA.html
+++ b/MFA.html
@@ -25,38 +25,6 @@
     </div>
   </div>
   </div>
-  <div class="headcontainer">
-    <a href="Amazon.html" class="hover-headcontainer">
-      <img src="amazon3.gif" alt="Amazon GIF"
-      style="width:100%;">
-      <img src="portfolio icons-04.png" alt="Amazon Icon"
-      style="width:100%;">
-    </a>
-    <a href="PartnersGlobal.html" class="hover-headcontainer">
-      <img src="pg.gif" alt="Partners Global GIF"
-      style="width:100%;">
-      <img src="portfolio icons-05.png" alt="Partners Global Icon"
-      style="width:100%;">
-    </a>
-  <a href="LondonPub.html" class="hover-headcontainer">
-    <img src="londonpubgif2.gif" alt="London Pub GIF"
-      style="width:100%;">
-    <img src="portfolio icons-07.png" alt="London Pub Icon"
-      style="width:100%;">
-  </a>
-  <a href="Drizly.html" class="hover-headcontainer">
-    <img src="drizly.gif" alt="Drizly GIF"
-      style="width:100%;">
-    <img src="portfolio icons-08.png" alt="Drizly Icon"
-      style="width:100%;">
-  </a>
-  <a href="ArtDesign.html" class="hover-headcontainer">
-    <img src="art.gif" alt="Art GIF"
-      style="width:100%;">
-    <img src="portfolio icons-03.png" alt="Art Icon"
-      style="width:100%;">
-  </a>
-  </div>
   </div>
  <h2>Museum of Fine Arts</h2>
    <h3>The Challenge: Bring more people into MFA's Art of the Americas Collection​.<br>
@@ -95,7 +63,7 @@
     style="width:100%;">
 </a>
 <a href="Drizly.html" class="hover-container">
-  <img src="drizly.gif" alt="Drizly GIF"
+    <img src="stubhub.gif" alt="Stubhub Gif"
     style="width:100%;">
   <img src="portfolio icons-08.png" alt="Drizly Icon"
     style="width:100%;">
