--- a/Drizly.html
+++ b/Drizly.html
@@ -28,9 +28,12 @@
   </div>
  <h2>StubHub</h2>
  <h3>The Challenge: Create a campaign for a brand you care about.<br>
-   The Solution: Show all the unique experiences StubHub has given to me.<br></br>
-<iframe width="100%" height="450" src="https://www.youtube.com/embed/PWG21Mbqo70" frameborder="0" allowfullscreen></iframe>
-<br></br>
+   The Solution: Show all the unique experiences StubHub has given to me.</h3>
+<div class="items">
+<div class="viditem">
+<iframe width="100%" height="520" src="https://www.youtube.com/embed/PWG21Mbqo70" frameborder="0" allowfullscreen></iframe>
+</div>
+</div>
 <div class="container">
   <a href="Amazon.html" class="hover-container">
     <img src="amazon3.gif" alt="Amazon GIF"
