--- a/about.html
+++ b/about.html
@@ -24,13 +24,17 @@
 </div>
 </div>
 <div class="container">
-<img src="aboutpage.jpg" alt="about image" style="width:50%;height:50%;">
-<h3>I have enjoyed creating art since a young age and I hope
-  you have enjoyed viewing my work. I am eager and excited to use my talents in
-  art in an industry that can influence so many people. Advertising is a powerful
-  industry and I believe in using its power for good. This is why I hope to work
-  as an art director for nonprofit clients and cause-related advertising.<br></br>
-<b>murraym1@bu.edu<br>(631)702-3715</b></h3>
+  <h3>I think art is pretty cool.<br></br>
+  So I learned how to <a href="ArtDesign.html"><u>paint</u>.</a><br></br>
+  I think computers are pretty cool.<br></br>
+  So I learned how to code <a href="index.html"><u>this website</u>.</a><br></br>
+  I think Pixar is pretty cool.<br></br>
+  So <span><u>here's</u></span><div class="test"><img src="about.gif" alt="About GIF"
+  style="width:100px;height:100px;"></div> my first step to becoming the next Pixar animator.<br></br>
+      In the meantime, I do some pretty cool art direction too.<br></br><br></br>
+  <div class="contact">(631) 702-3715<br>
+  murraym1@bu.edu</div></h3>
+  </h3>
 </div>
 </body>
 </html>
