Amazon and StubHub

--- a/Drizly.html
+++ b/Drizly.html
@@ -28,11 +28,25 @@
   </div>
  <h2>StubHub</h2>
  <h3>The Challenge: Create a campaign for a brand you care about.<br>
-   The Solution: Show all the unique experiences StubHub has given to me.</h3>
+   The Solution: Show how StubHub can give people experiences they will never forget.</h3>
 <div class="items">
 <div class="viditem">
-<iframe width="100%" height="520" src="https://www.youtube.com/embed/PWG21Mbqo70" frameborder="0" allowfullscreen></iframe>
+<iframe width="100%" height="520" src="https://www.youtube.com/embed/fcqgpoDuuts" frameborder="0" allowfullscreen></iframe>
 </div>
+</div>
+<div class="stubhubitems">
+  <div class="stubhubimg">
+    <img src="stubhub1.jpg" alt="StubHub Example 1"
+    style="width:100%;">
+  </div>
+  <div class="stubhubimg">
+    <img src="stubhub4.gif" alt="StubHub Social Media Post"
+    style="width:100%;">
+  </div>
+  <div class="stubhubimg">
+    <img src="stubhub2.jpg" alt="StubHub Example 2"
+    style="width:100%;">
+  </div>
 </div>
 <div class="container">
   <a href="Amazon.html" class="hover-container">
