--- a/MFA.html
+++ b/MFA.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Home</title>
   <link rel="stylesheet" href="pages.css">
+  <link rel="icon" href="favicon.png" type="image/gif" sizes="16x16">
 </head>
 <body>
   <div class="header">
@@ -25,7 +26,7 @@
     </div>
   </div>
   </div>
-  </div> 
+  </div>
  <h2>Museum of Fine Arts</h2>
    <h3>The Challenge: Bring more people into MFA's Art of the Americas Collection​.<br>
      The Solution: Make Bostonians realize this is the weekend to go to the MFA.</h3>
