--- a/resume.html
+++ b/resume.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Home</title>
   <link rel="stylesheet" href="pages.css">
+  <link rel="icon" href="favicon.png" type="image/gif" sizes="16x16">
 </head>
 <body>
   <body>
@@ -23,7 +24,7 @@
       </div>
       <div class="menu">
         <a href="resume.html"><b>resume</b></a>
-      </div> 
+      </div>
     </div>
     </div>
   </div>
