--- a/Amazon.html
+++ b/Amazon.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Home</title>
   <link rel="stylesheet" href="pages.css">
+  <link rel="icon" href="favicon.png" type="image/gif" sizes="16x16">
 </head>
 <body>
   <div class="header">
