--- a/ArtDesign.html
+++ b/ArtDesign.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Home</title>
   <link rel="stylesheet" href="ArtDesign.css">
-
+  <link rel="icon" href="favicon.png" type="image/gif" sizes="16x16">
 </head>
 <body>
 <div class="header">
