--- a/PartnersGlobal.html
+++ b/PartnersGlobal.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Home</title>
   <link rel="stylesheet" href="pages.css">
+  <link rel="icon" href="favicon.png" type="image/gif" sizes="16x16">
 </head>
 <body>
   <div class="header">
@@ -24,7 +25,7 @@
       <a href="resume.html"><b>resume</b></a>
     </div>
   </div>
-  </div> 
+  </div>
   </div>
  <h2>Partners Global</h2>
    <h3>The Challenge: Develop a creative concept that brings people together to
