--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="AD2.css">
+  <link rel="icon" href="favicon.png" type="image/gif" sizes="16x16">
 </head>
 <body>
 <div class="header">
@@ -55,7 +56,7 @@
   style="width:250px;height:206px;">
   <img src="portfolio icons-08.png" alt="Drizly"
   style="width:250px;height:206px;">
-</a> 
+</a>
 <a href="ArtDesign.html" class="hover-container">
   <img src="art.gif" alt="Drizly"
   style="width:250px;height:206px;">
