--- a/PartnersGlobal.html
+++ b/PartnersGlobal.html
@@ -113,5 +113,10 @@
     </a>
     </div>
 </div>
+<hr>
+<div class="footer">
+  <p>(631) 702-3715<br>
+  <a href="mailto:murraym1@bu.edu">murraym1@bu.edu</a></p>
+</div>
 </body>
 </html>
