--- a/index.html
+++ b/index.html
@@ -64,5 +64,11 @@
   style="width:250px;height:206px;">
 </a>
 </div>
+<br></br>
+<hr>
+<div class="footer">
+  <p>(631) 702-3715<br>
+  <a href="mailto:murraym1@bu.edu">murraym1@bu.edu</a></p>
+</div>
 </body>
 </html>
