--- a/ArtDesign.html
+++ b/ArtDesign.html
@@ -148,5 +148,10 @@
           </div>
       </div>
   </div>
+  <hr>
+  <div class="footer">
+    <p>(631) 702-3715<br>
+    <a href="mailto:murraym1@bu.edu">murraym1@bu.edu</a></p>
+  </div>
 </body>
 </html>
