--- a/resume.html
+++ b/resume.html
@@ -34,5 +34,10 @@
       style="width:100%;">
     </div>
   </div>
+  <hr>
+  <div class="footer">
+    <p>(631) 702-3715<br>
+    <a href="mailto:murraym1@bu.edu">murraym1@bu.edu</a></p>
+  </div>
   </body>
   </html>
