--- a/about.html
+++ b/about.html
@@ -25,8 +25,6 @@
 </div>
 </div>
 <div class="container">
-<img src="aboutpage.jpg" alt="about page photo"
-  style="width:43%;height:43%;">
   <h3>I think art is pretty cool.<br></br>
   So I learned how to <a href="ArtDesign.html"><u>paint</u>.</a><br></br>
   I think computers are pretty cool.<br></br>
@@ -34,12 +32,10 @@
   I think Pixar is pretty cool.<br></br>
   So <span><u>here's</u></span><div class="test"><img src="about.gif" alt="About GIF"
   style="width:100px;height:100px;"></div> my first step to becoming the next Pixar animator.<br></br>
-      In the meantime, I do some pretty cool art direction too.<br></br><br></br></h3>
-</div>
-<hr>
-<div class="footer">
-  <p>(631) 702-3715<br>
-  <a href="mailto:murraym1@bu.edu">murraym1@bu.edu</a></p>
+      In the meantime, I do some pretty cool art direction too.<br></br><br></br>
+  <div class="contact">(631) 702-3715<br>
+  murraym1@bu.edu</div></h3>
+  </h3>
 </div>
 </body>
 </html>
