--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="AD2.css">
   <link rel="icon" href="favicon.png" type="image/gif" sizes="16x16">
+  <title>Work</title>
 </head>
 <body>
 <div class="header">
