--- a/resume.html
+++ b/resume.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Home</title>
   <link rel="stylesheet" href="pages.css">
   <link rel="icon" href="favicon.png" type="image/gif" sizes="16x16">
+  <title>Resume</title>
 </head>
 <body>
   <body>
