--- a/ArtDesign.html
+++ b/ArtDesign.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Home</title>
   <link rel="stylesheet" href="ArtDesign.css">
   <link rel="icon" href="favicon.png" type="image/gif" sizes="16x16">
+  <title>Paintings</title>
 </head>
 <body>
 <div class="header">
