--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="about.css">
   <link rel="icon" href="favicon.png" type="image/gif" sizes="16x16">
+  <title>About</title>
 </head>
 <body>
 <div class="header">
