--- a/about.html
+++ b/about.html
@@ -27,14 +27,14 @@
 </div>
 <div class="container">
 <img src="aboutpage.jpg" alt="about page photo"
-  style="width:43%;height:43%;">
+  style="width:31%;height:31%;">
   <h3>I think art is pretty cool.<br></br>
   So I learned how to <a href="ArtDesign.html"><u>paint</u>.</a><br></br>
   I think computers are pretty cool.<br></br>
   So I learned how to code <a href="index.html"><u>this website</u>.</a><br></br>
   I think Pixar is pretty cool.<br></br>
   So <span><u>here's</u></span><div class="test"><img src="about.gif" alt="About GIF"
-  style="width:100px;height:100px;"></div> my first step to becoming the next Pixar animator.<br></br>
+  style="width:100px;height:100px;"></div> my first step to conquering animation.<br></br>
       In the meantime, I do some pretty cool art direction too.<br></br><br></br></h3>
 </div>
 <hr>
