--- a/Amazon.html
+++ b/Amazon.html
@@ -10,7 +10,7 @@
   <div class="header">
     <div class="logo">
         <a href="index.html">
-          <img src="logo-02.png" alt="logo"
+          <img src="logo.png" alt="logo"
           style="width:150px;height:125px;">
         </a>
   <div class="home">
@@ -27,7 +27,7 @@
   </div>
   </div>
   </div>
- <h2>Amazon Dash Button</h2>
+ <h2><a href="ArtDesign.html">&lt; &nbsp; </a> Amazon Dash Button <a href="PartnersGlobal.html">&nbsp; &gt;</a></h2>
    <h3>The Challenge: Introduce Amazon Dash Buttons.<br>
      The Solution:  Show people the wide range of brands they can get sent to
    their home with just the click of a button.</h3>
