--- a/Drizly.html
+++ b/Drizly.html
@@ -10,7 +10,7 @@
   <div class="header">
     <div class="logo">
         <a href="index.html">
-          <img src="logo-02.png" alt="logo"
+          <img src="logo.png" alt="logo"
           style="width:150px;height:125px;">
         </a>
   <div class="home">
@@ -27,7 +27,7 @@
   </div>
   </div>
   </div>
- <h2>StubHub</h2>
+<h2><a href="LondonPub.html">&lt; &nbsp; </a> StubHub Stories <a href="ArtDesign.html">&nbsp; &gt;</a></h2>
  <h3>The Challenge: Create a campaign for a brand you care about.<br>
    The Solution: Show how StubHub can give people experiences they will never forget.</h3>
 <div class="items">
