--- a/MFA.html
+++ b/MFA.html
@@ -10,7 +10,7 @@
   <div class="header">
     <div class="logo">
         <a href="index.html">
-          <img src="logo-02.png" alt="logo"
+          <img src="logo.png" alt="logo"
           style="width:150px;height:125px;">
         </a>
   <div class="home">
@@ -27,7 +27,7 @@
   </div>
   </div>
   </div>
- <h2>Museum of Fine Arts</h2>
+<h2><a href="PartnersGlobal.html">&lt; &nbsp; </a> Why This Weekend <a href="LondonPub.html">&nbsp; &gt;</a></h2>
    <h3>The Challenge: Bring more people into MFA's Art of the Americas Collection​.<br>
      The Solution: Make Bostonians realize this is the weekend to go to the MFA.</h3>
 <div class="items">
