--- a/PartnersGlobal.html
+++ b/PartnersGlobal.html
@@ -10,7 +10,7 @@
   <div class="header">
     <div class="logo">
         <a href="index.html">
-          <img src="logo-02.png" alt="logo"
+          <img src="logo.png" alt="logo"
           style="width:150px;height:125px;">
         </a>
   <div class="home">
@@ -27,7 +27,7 @@
   </div>
   </div>
   </div>
- <h2>Partners Global</h2>
+<h2><a href="Amazon.html">&lt; &nbsp; </a> Link the World <a href="MFA.html">&nbsp; &gt;</a></h2>
    <h3>The Challenge: Develop a creative concept that brings people together to
      create peace.<br>
      The Solution: Have people pledge to tweet to raise money for global
@@ -112,7 +112,6 @@
         style="width:100%;">
     </a>
     </div>
-</div>
 <hr>
 <div class="footer">
   <p>(631) 702-3715<br>
