--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 <body>
 <div class="header">
       <a href="index.html">
-        <img src="logo-02.png" alt="logo"
+        <img src="logo.png" alt="logo"
         style="width:150px;height:125px;">
       </a>
 <div class="home">
