--- a/resume.html
+++ b/resume.html
@@ -11,7 +11,7 @@
     <div class="header">
       <div class="logo">
           <a href="index.html">
-            <img src="logo-02.png" alt="logo"
+            <img src="logo.png" alt="logo"
             style="width:150px;height:125px;">
           </a>
     <div class="home">
