--- a/LondonPub.html
+++ b/LondonPub.html
@@ -10,7 +10,7 @@
   <div class="header">
     <div class="logo">
         <a href="index.html">
-          <img src="logo-02.png" alt="logo"
+          <img src="logo.png" alt="logo"
           style="width:150px;height:125px;">
         </a>
   <div class="home">
@@ -27,7 +27,7 @@
   </div>
   </div>
   </div>
- <h2>London Pub</h2>
+<h2><a href="MFA.html">&lt; &nbsp; </a> Give Your Food a Better Accent <a href="Drizly.html">&nbsp; &gt;</a></h2>
    <h3>The Challenge: London Pub is virtually unknown in the US.<br>
      The Solution: Introduce it as ketchup with a unique flavor and
      quintessentially British personality.</h3>
