--- a/resume.html
+++ b/resume.html
@@ -29,10 +29,8 @@
     </div>
   </div>
   <div class="resume">
-    <div class="imgitem">
-      <img src="resume.jpg" alt="resume"
-      style="width:100%;">
-    </div>
+      <img src="websiteresume.png" alt="resume"
+      style="width:55%;">
   </div>
   <hr>
   <div class="footer">
