--- a/ArtDesign.html
+++ b/ArtDesign.html
@@ -101,6 +101,44 @@
                           <p><a class="button" href="#popup36"><img src="logo-09.png" alt="Art36"
                           style="width:200px;"></a></p>
   </div>
+  <br></br>
+      <div class="container">
+        <a href="Amazon.html" class="hover-container">
+          <img src="amazon3.gif" alt="Amazon GIF"
+          style="width:100%;">
+          <img src="portfolio icons-04.png" alt="Amazon Icon"
+          style="width:100%;">
+        </a>
+        <a href="MFA.html" class="hover-container">
+          <img src="mfa5.gif" alt="Drizly"
+          style="width:100%;">
+          <img src="portfolio icons-06.png" alt="Drizly"
+          style="width:100%;">
+        </a>
+      <a href="LondonPub.html" class="hover-container">
+        <img src="londonpubgif2.gif" alt="London Pub GIF"
+          style="width:100%;">
+        <img src="portfolio icons-07.png" alt="London Pub Icon"
+          style="width:100%;">
+      </a>
+      <a href="StubHub.html" class="hover-container">
+      <img src="stubhub.gif" alt="Stubhub Gif"
+          style="width:100%;">
+        <img src="portfolio icons-08.png" alt="Drizly Icon"
+          style="width:100%;">
+      </a>
+      <a href="ArtDesign.html" class="hover-container">
+        <img src="art.gif" alt="Art GIF"
+          style="width:100%;">
+        <img src="portfolio icons-03.png" alt="Art Icon"
+          style="width:100%;">
+      </a>
+      </div>
+  <hr>
+  <div class="footer">
+    <p>(631) 702-3715<br>
+    <a href="mailto:murraym1@bu.edu">murraym1@bu.edu</a></p>
+  </div>
   <div id="popup1" class="overlay">
       <div class="popup">
         <img src="art1.jpg" alt="art1"
@@ -532,45 +570,6 @@
               <p>Kindle Mentoring Program Logo</p>
           </div>
       </div>
-  </div>
-
-  <br></br>
-      <div class="container">
-        <a href="Amazon.html" class="hover-container">
-          <img src="amazon3.gif" alt="Amazon GIF"
-          style="width:100%;">
-          <img src="portfolio icons-04.png" alt="Amazon Icon"
-          style="width:100%;">
-        </a>
-        <a href="MFA.html" class="hover-container">
-          <img src="mfa5.gif" alt="Drizly"
-          style="width:100%;">
-          <img src="portfolio icons-06.png" alt="Drizly"
-          style="width:100%;">
-        </a>
-      <a href="LondonPub.html" class="hover-container">
-        <img src="londonpubgif2.gif" alt="London Pub GIF"
-          style="width:100%;">
-        <img src="portfolio icons-07.png" alt="London Pub Icon"
-          style="width:100%;">
-      </a>
-      <a href="Drizly.html" class="hover-container">
-      <img src="stubhub.gif" alt="Stubhub Gif"
-          style="width:100%;">
-        <img src="portfolio icons-08.png" alt="Drizly Icon"
-          style="width:100%;">
-      </a>
-      <a href="ArtDesign.html" class="hover-container">
-        <img src="art.gif" alt="Art GIF"
-          style="width:100%;">
-        <img src="portfolio icons-03.png" alt="Art Icon"
-          style="width:100%;">
-      </a>
-      </div>
-  <hr>
-  <div class="footer">
-    <p>(631) 702-3715<br>
-    <a href="mailto:murraym1@bu.edu">murraym1@bu.edu</a></p>
   </div>
 </body>
 </html>
