--- a/resume.html
+++ b/resume.html
@@ -7,7 +7,6 @@
   <title>Resume</title>
 </head>
 <body>
-  <body>
     <div class="header">
       <div class="logo">
           <a href="index.html">
@@ -28,9 +27,11 @@
     </div>
     </div>
   </div>
-  <div class="resume">
-      <img src="websiteresume.png" alt="resume"
-      style="width:55%;">
+  <div class="items">
+    <div class="resume">
+      <img src="websiteresume.jpg" alt="resume"
+      style="width:100%;">
+    </div>
   </div>
   <hr>
   <div class="footer">
