--- a/Amazon.html
+++ b/Amazon.html
@@ -80,7 +80,7 @@
   <img src="portfolio icons-07.png" alt="Drizly"
     style="width:100%;">
 </a>
-<a href="Drizly.html" class="hover-container">
+<a href="StubHub.html" class="hover-container">
     <img src="stubhub.gif" alt="Stubhub Gif"
     style="width:100%;">
   <img src="portfolio icons-08.png" alt="Drizly"
