--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <img src="portfolio icons-07.png" alt="Drizly"
   style="width:250px;height:206px;">
 </a>
-<a href="Drizly.html" class="hover-container">
+<a href="StubHub.html" class="hover-container">
     <img src="stubhub.gif" alt="Stubhub Gif"
   style="width:250px;height:206px;">
   <img src="portfolio icons-08.png" alt="Drizly"
