--- a/Amazon.html
+++ b/Amazon.html
@@ -63,7 +63,7 @@
 </div>
 <div class="container">
   <a href="PartnersGlobal.html" class="hover-container">
-    <img src="pg.gif" alt="Drizly"
+    <img src="pg2.gif" alt="Drizly"
     style="width:100%;">
     <img src="portfolio icons-05.png" alt="Drizly"
     style="width:100%;">
@@ -75,19 +75,19 @@
     style="width:100%;">
   </a>
 <a href="LondonPub.html" class="hover-container">
-  <img src="londonpubgif2.gif" alt="London Pub GIF"
+  <img src="lp2.gif" alt="London Pub GIF"
     style="width:100%;">
   <img src="portfolio icons-07.png" alt="Drizly"
     style="width:100%;">
 </a>
 <a href="StubHub.html" class="hover-container">
-    <img src="stubhub.gif" alt="Stubhub Gif"
+    <img src="stubhub2.gif" alt="Stubhub Gif"
     style="width:100%;">
   <img src="portfolio icons-08.png" alt="Drizly"
     style="width:100%;">
 </a>
 <a href="ArtDesign.html" class="hover-container">
-  <img src="art.gif" alt="Drizly"
+  <img src="art2.gif" alt="Drizly"
     style="width:100%;">
   <img src="portfolio icons-03.png" alt="Drizly"
     style="width:100%;">
