--- a/StubHub.html
+++ b/StubHub.html
@@ -51,13 +51,13 @@
 </div>
 <div class="container">
   <a href="Amazon.html" class="hover-container">
-    <img src="amazon3.gif" alt="Amazon GIF"
+    <img src="amazon2.gif" alt="Amazon GIF"
     style="width:100%;">
     <img src="portfolio icons-04.png" alt="Amazon Icon"
     style="width:100%;">
   </a>
   <a href="PartnersGlobal.html" class="hover-container">
-    <img src="pg.gif" alt="Partners Global GIF"
+    <img src="pg2.gif" alt="Partners Global GIF"
     style="width:100%;">
     <img src="portfolio icons-05.png" alt="Partners Global Icon"
     style="width:100%;">
@@ -69,13 +69,13 @@
     style="width:100%;">
   </a>
   <a href="LondonPub.html" class="hover-container">
-    <img src="londonpubgif2.gif" alt="London Pub GIF"
+    <img src="lp2.gif" alt="London Pub GIF"
       style="width:100%;">
     <img src="portfolio icons-07.png" alt="London Pub Icon"
       style="width:100%;">
   </a>
 <a href="ArtDesign.html" class="hover-container">
-  <img src="art.gif" alt="Art GIF"
+  <img src="art2.gif" alt="Art GIF"
     style="width:100%;">
   <img src="portfolio icons-03.png" alt="Art Icon"
     style="width:100%;">
