--- a/index.html
+++ b/index.html
@@ -27,41 +27,41 @@
 </div>
 <div class="container">
 <a href="Amazon.html" class="hover-container">
-  <img src="amazon3.gif" alt="Amazon"
+  <img src="portfolio icons-04.png" alt="Amazon"
   style="width:250px;height:206px;">
-  <img src="portfolio icons-04.png" alt="Drizly"
+  <img src="amazon3.gif" alt="Drizly"
   style="width:250px;height:206px;">
 </a>
 <a href="PartnersGlobal.html" class="hover-container">
-  <img src="pg.gif" alt="Drizly"
-  style="width:250px;height:206px;">
   <img src="portfolio icons-05.png" alt="Drizly"
+  style="width:250px;height:206px;">
+  <img src="pg.gif" alt="Drizly"
   style="width:250px;height:206px;">
 </a>
 <a href="MFA.html" class="hover-container">
-  <img src="mfa5.gif" alt="Drizly"
-  style="width:250px;height:206px;">
   <img src="portfolio icons-06.png" alt="Drizly"
+  style="width:250px;height:206px;">
+  <img src="mfa5.gif" alt="Drizly"
   style="width:250px;height:206px;">
 </a>
 </div>
 <div class="container">
 <a href="LondonPub.html" class="hover-container">
-  <img src="londonpubgif2.gif" alt="London Pub GIF"
+  <img src="portfolio icons-07.png" alt="London Pub GIF"
   style="width:250px;height:206px;">
-  <img src="portfolio icons-07.png" alt="Drizly"
+  <img src="londonpubgif2.gif" alt="Drizly"
   style="width:250px;height:206px;">
 </a>
 <a href="StubHub.html" class="hover-container">
-    <img src="stubhub.gif" alt="Stubhub Gif"
+    <img src="portfolio icons-08.png" alt="Stubhub Gif"
   style="width:250px;height:206px;">
-  <img src="portfolio icons-08.png" alt="Drizly"
+  <img src="stubhub.gif" alt="Drizly"
   style="width:250px;height:206px;">
 </a>
 <a href="ArtDesign.html" class="hover-container">
-  <img src="art.gif" alt="Drizly"
-  style="width:250px;height:206px;">
   <img src="portfolio icons-03.png" alt="Drizly"
+  style="width:250px;height:206px;">
+  <img src="art.gif" alt="Drizly"
   style="width:250px;height:206px;">
 </a>
 </div>
