--- a/ArtDesign.html
+++ b/ArtDesign.html
@@ -104,9 +104,15 @@
   <br></br>
       <div class="container">
         <a href="Amazon.html" class="hover-container">
-          <img src="amazon3.gif" alt="Amazon GIF"
+          <img src="amazon2.gif" alt="Amazon GIF"
           style="width:100%;">
           <img src="portfolio icons-04.png" alt="Amazon Icon"
+          style="width:100%;">
+        </a>
+        <a href="PartnersGlobal.html" class="hover-container">
+          <img src="pg2.gif" alt="Partners Global GIF"
+          style="width:100%;">
+          <img src="portfolio icons-05.png" alt="Partners Global Icon"
           style="width:100%;">
         </a>
         <a href="MFA.html" class="hover-container">
@@ -116,21 +122,15 @@
           style="width:100%;">
         </a>
       <a href="LondonPub.html" class="hover-container">
-        <img src="londonpubgif2.gif" alt="London Pub GIF"
+        <img src="lp2.gif" alt="London Pub GIF"
           style="width:100%;">
         <img src="portfolio icons-07.png" alt="London Pub Icon"
           style="width:100%;">
       </a>
       <a href="StubHub.html" class="hover-container">
-      <img src="stubhub.gif" alt="Stubhub Gif"
+      <img src="stubhub2.gif" alt="Stubhub Gif"
           style="width:100%;">
         <img src="portfolio icons-08.png" alt="Drizly Icon"
-          style="width:100%;">
-      </a>
-      <a href="ArtDesign.html" class="hover-container">
-        <img src="art.gif" alt="Art GIF"
-          style="width:100%;">
-        <img src="portfolio icons-03.png" alt="Art Icon"
           style="width:100%;">
       </a>
       </div>
