--- a/ArtDesign.html
+++ b/ArtDesign.html
@@ -424,7 +424,7 @@
           <a class="leftarrow" href="#popup31">&#8249;</a>
           <a class="rightarrow" href="#popup26">&#8250;</a>
           <div class="content">
-              <p>Summer Undergraduate Research Fellowship (SURF) Program Logo</p>
+              <p>Summer Undergraduate Research Fellowship (SURF) T-Shirt</p>
           </div>
       </div>
   </div>
