StubHub code error

--- a/ArtDesign.html
+++ b/ArtDesign.html
@@ -25,7 +25,7 @@
   </div>
 </div>
 </div>
-<h2><a href="Drizly.html">&lt; &nbsp; </a> Art &amp; Design <a href="Amazon.html">&nbsp; &gt;</a></h2>
+<h2><a href="StubHub.html">&lt; &nbsp; </a> Art &amp; Design <a href="Amazon.html">&nbsp; &gt;</a></h2>
 <br></br>
   <div id="wrapper">
     <p><a class="button" href="#popup1"><img src="art1.png" alt="Art1"
