--- a/about.html
+++ b/about.html
@@ -38,9 +38,9 @@
       In the meantime, I do some pretty cool art direction too.<br></br><br></br></h3>
 </div>
 <hr>
-<div class="footer">
+<footer>
   <p>(631) 702-3715<br>
   <a href="mailto:murraym1@bu.edu">murraym1@bu.edu</a></p>
-</div>
+</footer>
 </body>
 </html>
