--- a/index.html
+++ b/index.html
@@ -38,28 +38,28 @@
   <img src="pg.gif" alt="Drizly"
   style="width:250px;height:206px;">
 </a>
-<a href="MFA.html" class="hover-container">
-  <img src="portfolio icons-06.png" alt="Drizly"
-  style="width:250px;height:206px;">
-  <img src="mfa5.gif" alt="Drizly"
-  style="width:250px;height:206px;">
-</a>
-</div>
-<div class="container">
 <a href="LondonPub.html" class="hover-container">
   <img src="portfolio icons-07.png" alt="London Pub GIF"
   style="width:250px;height:206px;">
   <img src="londonpubgif2.gif" alt="Drizly"
   style="width:250px;height:206px;">
 </a>
+</div>
+<div class="container">
 <a href="StubHub.html" class="hover-container">
     <img src="portfolio icons-08.png" alt="Stubhub Gif"
   style="width:250px;height:206px;">
   <img src="stubhub.gif" alt="Drizly"
   style="width:250px;height:206px;">
 </a>
+<a href="DesignForGood.html" class="hover-container">
+  <img src="portfolio icons-06.png" alt="Drizly"
+  style="width:250px;height:206px;">
+  <img src="buddyclub.gif" alt="BuddyClub"
+  style="width:250px;height:206px;">
+</a>
 <a href="ArtDesign.html" class="hover-container">
-  <img src="portfolio icons-03.png" alt="Drizly"
+  <img src="portfolio icons-03.png" alt="ArtDesign"
   style="width:250px;height:206px;">
   <img src="art.gif" alt="Drizly"
   style="width:250px;height:206px;">
